minor improvement for TestTimer